--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ python = "^3.12"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.3"
 
+[tool.poetry.group.dev.dependencies]
+mypy = "*"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
