--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 fetcher = "api-fetcher.main:run"
+download = "scraper.core:test"
