--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Install packages
         run: poetry install
       - name: Prep mypy
-        run: poetry run mypy scraper api-fetcher || true && poetry run mypy --non-interactive --install-types
+        run: poetry run mypy scraper api_fetcher || true && poetry run mypy --non-interactive --install-types
       - name: Run mypy
-        run: poetry run mypy scraper api-fetcher
+        run: poetry run mypy scraper api_fetcher
