Add sync module
This doesn't do everything yet, but it's a start.
This also adds tests that are run on CI

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,3 +17,5 @@ jobs:
         run: poetry run mypy scraper api_fetcher || true && poetry run mypy --non-interactive --install-types
       - name: Run mypy
         run: poetry run mypy scraper api_fetcher
+      - name: Run pytest tests
+        run: poetry run pytest
