--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ packages = [
 python = "^3.12"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.3"
+py-dateutil = "^2.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "*"
